[project]
name = "migra-net-china"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "networkqit>=0.20.0",
    "networks>=0.3.7",
    "networkx>=3.6",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "powerlaw>=1.5",
    "python-louvain>=0.16",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]
